tests/tests/ui/projection_method_collision_query.stderr
error: use of deprecated function `_::limit`: generated method `limit()` for field `limit` on `Widget` shadows built-in method. Use `.select(Widget::fields().limit())` to project this field.
  --> tests/ui/projection_method_collision_query.rs:12:5
   |
12 |     limit: i64,
   |     ^^^^^
   |
note: the lint level is defined here
  --> tests/ui/projection_method_collision_query.rs:5:9
   |
 5 | #![deny(deprecated)]
   |         ^^^^^^^^^^
